# gh-client

./: .gitignore  pyproject.toml  requirements.txt
src/: cli.py  gh_client.py
